Bug on iOS fix

--- a/css/style.scss
+++ b/css/style.scss
@@ -324,13 +324,11 @@ ul{
     }
 
     .img-container{
+      display: block;
       width: 100%;
 
       img{
-        width: 50%;
-        height: auto;
-        display: block;
-        margin: 0 auto;
+        width: 100%;
       }
     }
 
